infra/cluster/node-setup.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-setup
  labels:
    k8s-app: node-setup
spec:
  selector:
    matchLabels:
      name: node-setup
  template:
    metadata:
      labels:
        name: node-setup
    spec:
      imagePullSecrets:
        - name: registry.internal.aleemhaji.com
      containers:
        - name: node-setup
          image: registry.internal.aleemhaji.com/busybox:1.37.0
          command:
            - sh
            - -xefc
            - |
              sysctl -w fs.inotify.max_user_watches="$INOTIFY_MAX_USER_WATCHES"
              cat /proc/sys/fs/inotify/max_user_watches
              while true; do
                echo >&2 "Still sleeping..."
                sleep 3600
              done
          securityContext:
            privileged: true
